#399 - Added getCalendar function and called it in indexAction, also added config in example file

--- a/src/config/config.xml.example
+++ b/src/config/config.xml.example
@@ -28,6 +28,10 @@
       <url>https://digital.library.emory.edu/taxonomy/term/26/all/feed</url>
       <lifetime>3600</lifetime>
     </docs_feed>
+    <calendar_feed>
+      <url>URL-TO-SHARED-GOOGLE-CALENDAR</url>
+      <lifetime>3600</lifetime>
+    </calendar_feed>
     <tmpdir></tmpdir>
     <logfile></logfile>
     <!-- executable for pdftohtml; supply full path if necessary -->
