--- a/src/config/solr.xml.example
+++ b/src/config/solr.xml.example
@@ -4,14 +4,8 @@
      <path></path>
      <port></port>
 <!-- fields which should be included as default facets -->
-     <facet>year</facet>
-     <facet>subject_facet</facet>
-     <facet>keyword_facet</facet>
-     <facet>author_facet</facet>
-     <facet>committee_facet</facet>
-     <facet>program_facet</facet>
-     <facet>program_id</facet>
-     <facet>document_type</facet>
+     <facet></facet>
+     <facet></facet>
   </development>
   <test extends="development">
      <port></port>
